# talk-to-it

./: .gitignore  app.tcss  init_models.py  logging_config.py  main.py  pyproject.toml  start-debug-console.sh  start-dev.sh
audio_player/: player.py
audio_recorder/: recorder.py
characters/: character.py
characters/config/shadowheart/: description.md
commands/: command_base.py  exit_command.py  help_command.py  prompt_command.py  repeat_command.py  start_recording_command.py  stop_recording_command.py
controllers/: app_controller.py
repl/: repl.py
services/: audio_sevice.py  conversation_service.py
tools/: _init_tools.py  weather.py
transcriber/: transcriber.py
tts/: tts_client.py
