[project]
name = "talk-to-it"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets[audio]>=4.1.1",
    "librosa>=0.11.0",
    "numpy>=2.3.3",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "scipy>=1.16.2",
    "sounddevice>=0.5.2",
    "transformers[torch]>=4.56.2",
]
