[project]
name = "talk-to-it"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chatterbox-tts==0.1.2",
    "datasets[audio]==3.6.0",
    "librosa>=0.11.0",
    "numpy>=2.3.3",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "scipy>=1.16.2",
    "sounddevice>=0.5.2",
    "textual[syntax]>=6.2.1",
    "textual-dev>=1.7.0",
    "transformers[torch]>=4.46.3",
    "langchain[google-genai]>=1.0.0a12",
]
